--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "engines": {
+  "node": "18.x"
+}
+
 }
