--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
+    "version": 2,
     "functions": {
-      "api/*": {
-        "runtime": "nodejs18.x" 
+      "api/**/*.js": {
+        "runtime": "nodejs18.x"
       }
-    },
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/$1",
-        "methods": ["GET", "POST", "PUT", "DELETE"]
-      }
-    ]
+    }
   }
   
